src/kubernetes/master/job-scheduler/job-scheduler.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cas.master.job-scheduler
  labels:
    app: job-scheduler
    project: carbon-aware-scheduler
    component: master
spec:
  replicas: 1
  selector:
    matchLabels:
      project: carbon-aware-scheduler
      component: master
      app: job-scheduler
  template:
    metadata:
      labels:
        project: carbon-aware-scheduler
        component: master
        app: job-scheduler
    spec:
      containers:
      - name: cas-master-job-scheduler
        image: gitlab-registry.nrp-nautilus.io/c3lab/carbon-aware-scheduler/master.job-scheduler:0.1
        imagePullPolicy: Always
        resources:
          limits:
            memory: 1Gi
            cpu: "1"
          requests:
            memory: 512Mi
            cpu: 500m
      imagePullSecrets:
        - name: regcred
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/region
                    operator: In
                    values:
                      - "us-west"
                      - "us-central"
                      - "us-east"
