src/kubernetes/master/job-scheduler/job-scheduler.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: job-scheduler
    project: carbon-aware-scheduler
    component: master
  name: cas-job-scheduler
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: job-scheduler
    project: carbon-aware-scheduler
    component: master
  type: ClusterIP
